# spinachgui

./: .gitignore  CMakeLists.txt  SpinachGUI.mmap  easyspin.fbp  orientdialog.fbp  setup-build.sh  spinach.fbp  wintools.cmake
3d/: camera.cpp  camera.hpp  displaySettings.cpp  displaySettings.hpp  glgeometry.cpp  glgeometry.hpp  glmode.cpp  glmode.hpp  opengl.hpp
Spinach/: MainFrm.cpp  MainFrm.h  ReadMe.txt  Resource.h  Spinach.aps  Spinach.cpp  Spinach.h  Spinach.rc  Spinach.reg  Spinach.sln  Spinach.vcproj  SpinachDoc.cpp  SpinachDoc.h  SpinachView.cpp  SpinachView.h  stdafx.cpp
auto/: SpinachGUI.cpp  SpinachGUI.h  easyspin.cpp  easyspin.h  orientdialog.cpp  orientdialog.h
data/: cubic.html  hexagonal.html  monoclinic.html  orthorhombic.html  spacegroups.html  spacegroups.txt  spinxml_schema.xsd  tetragonal.html  triclinic.html
easyspin/: EasySpinStandalone.cpp
gui/: Action.cpp  Action.hpp  DialogCombo.hpp  Display3D.cpp  Display3D.hpp  EasySpin.cpp  EasySpin.hpp  EasySpinFrame.cpp  EasySpinFrame.hpp  EventTranslator.hpp  InterDisplaySettings.cpp  InterDisplaySettings.hpp  InteractionEdit.cpp  InteractionEdit.hpp  LogSlider.cpp  LogSlider.hpp  MolSceneGraph.cpp  MolSceneGraph.hpp  OrientDialog2.cpp  OrientDialog2.hpp  OrientDisplay.cpp  OrientDisplay.hpp  OrientationEdit.cpp  OrientationEdit.hpp  RightClickMenu.cpp  RightClickMenu.hpp  RootFrame.cpp  RootFrame.hpp  Spacegroup.cpp  Spacegroup.hpp  SpinChoice.cpp  (+21 more)
src/: CMakeLists.txt  prebuild  spinach.fbp
src/auto/: SpinachGUI.cpp  SpinachGUI.h  spinxml_schema.cpp  spinxml_schema.hpp
src/aux/: ar2eig.d  isotopes.d
src/commandln/: Event_Test.cpp  main.cpp
src/data/: OFNAPH01_NMR.magres  hccch.xml  sampler.xml  spinsys.xml  spinxml_schema.xsd
src/doc/spec/: functional-spec.tex
src/gui/: 3DDisplay.cpp  3DDisplay.hpp  DialogCombo.hpp  Display3D.cpp  Display3D.hpp  Event.cpp  Event.hpp  EventSystem.hpp  InterDisplaySettings.cpp  InterDisplaySettings.hpp  InteractionEdit.cpp  InteractionEdit.hpp  LogSlider.cpp  LogSlider.hpp  MolSceneGraph.cpp  MolSceneGraph.hpp  OrientationEdit.cpp  OrientationEdit.hpp  RightClickMenu.cpp  RightClickMenu.hpp  RootFrame.cpp  RootFrame.hpp  SpinDialog.cpp  SpinDialog.hpp  SpinGrid.cpp  SpinGrid.hpp  SpinInteractionEdit.cpp  SpinInteractionEdit.hpp  SpinSysManager.cpp  SpinSysManager.hpp  SpinachApp.cpp  SpinachApp.hpp  StdEvents.cpp  StdEvents.hpp  glDisplay.cpp  glDisplay.hpp
src/py/: driver.py  interactionEdit.py  spinDialog.py  spinachapp.py  utils.py
src/res/: cluster.xpm  document_new.xpm  epr.xcf  nmr.xpm  nmr_epr.xcf
src/shared/: basic_math.cpp  basic_math.hpp  dstegr.cpp  dstegr.hpp  mathtypes.cpp  mathtypes.hpp  nuclear_data.cpp  nuclear_data.hpp  polynomial.hpp  spin.h  spin_system.cpp  spinsys.cpp  spinsys.hpp  spinsys_new.cpp  unit.cpp  unit.hpp  xmlFileOpps.cpp
src/shared/formats/: castep.cpp  g03.cpp  simpson.cpp  simpson.hpp  xml.cpp  xyz.cpp  xyz.hpp
src/shared/matlab/: dcm2euler.m  euler2dcm.m  mmath.cpp  mmath.ctf  mmath.exports  mmath.h  mmath.prj  mmath_mcc_component_data.c  readme.txt
src/shared/swig/: spinsys.i
src/tests/: math.cpp
src/utility/: isotopes.d
wxSpinach/: CMakeLists.txt  Spinach.cbp  SpinachGUI.mmap  calcFrame.cpp  calcFrame.h  glMolDisplay.cpp  glMolDisplay.h  optionFrame.cpp  optionFrame.h  rootFrame.cpp  rootFrame.h  rotationDialog.cpp  rotationDialog.h  spinach.fbp
wxSpinach/commandln/: main.cpp
wxSpinach/data/: hccch.xml  hccch.xyz  spinsys.xml  spinsys_spec.xsd
wxSpinach/doc/: Doxyfile
wxSpinach/doc/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeFiles_2shared_2swig_2spinsys_8py.html  CMakeFiles_2shared_2swig_2spinsys__wrap_8cpp.html  CustomEvents_8hpp-source.html  CustomEvents_8hpp.html  DialogCombo_8cpp.html  DialogCombo_8hpp-source.html  DialogCombo_8hpp.html  InteractionEdit_8cpp.html  InteractionEdit_8hpp-source.html  InteractionEdit_8hpp.html  Jcoupling_8xpm.html  OrientationEdit_8cpp.html  OrientationEdit_8hpp-source.html  OrientationEdit_8hpp.html  S_8xpm.html  SpinCalc_8m.html  SpinDialog_8cpp.html  SpinDialog_8hpp-source.html  SpinDialog_8hpp.html  SpinGrid_8cpp.html  SpinGrid_8hpp-source.html  SpinGrid_8hpp.html  SpinachApp_8cpp.html  SpinachApp_8h-source.html  SpinachApp_8h.html  SpinachApp_8hpp-source.html  SpinachApp_8hpp.html  SpinachGUI_8cpp.html  SpinachGUI_8h-source.html  SpinachGUI_8h.html  annotated.html  build_2driver_8py.html  build_2install_2data_2generateDS_8py.html  build_2install_2driver_8py.html  build_2install_2glDisplay_8py.html  build_2install_2interactionEdit_8py.html  build_2install_2orientationEdit_8py.html  build_2install_2res_2Jcoupling_8xpm.html  (+631 more)
wxSpinach/gui/: CustomEvents.hpp  EventSystem.cpp  EventSystem.hpp  InteractionEdit.cpp  InteractionEdit.hpp  OrientationEdit.cpp  OrientationEdit.hpp  RightClickMenu.cpp  RootFrame.cpp  RootFrame.hpp  SpinDialog.cpp  SpinDialog.hpp  SpinGrid.cpp  SpinGrid.hpp  SpinInteractionEdit.cpp  SpinInteractionEdit.hpp  SpinSysManager.cpp  SpinSysManager.hpp  SpinachApp.cpp  SpinachApp.h  SpinachApp.hpp  StdEvents.cpp  StdEvents.hpp  calcFrame.cpp  calcFrame.h  glDisplay.cpp  glDisplay.hpp  glMolDisplay.cpp  glMolDisplay.h  gui.xrc  optionFrame.cpp  optionFrame.h  rootFrame.cpp  rootFrame.h  rotationDialog.cpp  rotationDialog.h  spinach.fbp  spinachapp.py  spinpgbind.cpp  spinpgbind.h
wxSpinach/matlab_prototypes/: hfc_display.m
wxSpinach/py/: driver.py  editableSpinSys.py  eventManager.py  glDisplay.py  interactionEdit.py  orientationEdit.py  spinDialog.py  spinGrid.py  spinachapp.py  utils.py
wxSpinach/res/: Jcoupling.xpm  S.xpm  SpinachGUI.xrc  cluster.xpm  gui.xrc  noimage.xpm
wxSpinach/shared/: nuclear_data.cpp  nuclear_data.h  nuclear_data.hpp  spin.cpp  spin.h  spin_system.cpp  spin_system.h  spinsys.cpp  spinsys.hpp  spinsys_new.cpp  spinsys_new.hpp  struct.h  xercesc.h  xmlFileOpps.cpp
wxSpinach/shared/swig/: nuclear_data.i  spinsys.i
wxSpinach/splash screen/: splash screen.psd
wxSpinach/testing_kit/ADF/: phosphamine_a_efg.out  phosphamine_b_efg.out
wxSpinach/testing_kit/Simpson/: dipole.spinsys
(+83 files in other folders)
